Adding lorem to have idea of spacing

--- a/index.html
+++ b/index.html
@@ -34,35 +34,43 @@
   </head>
 
   <body>
-    <div class="page">
-      <div class="background">
-        <img
-          class="backgroundimg"
-          src="Ressources/Images/3.JPG"
-          alt="Background image"
-        />
-      </div>
-
-      <nav class="menu">
-        <div class="onglets">
-          <div class="aboutme">
-            <div class="aboutmepage">
-              <h1>About me</h1>
-            </div>
-          </div>
-          <div class="achievements">
-            <div class="achievementspage">
-              <h2>Achievements</h2>
-            </div>
-          </div>
-          <div class="contact">
-            <div class="contactpage">
-              <h3>Contact</h3>
-            </div>
-          </div>
-        </div>
-      </nav>
+    <div class="background">
+      <img
+        class="backgroundimg"
+        src="Ressources/Images/3.JPG"
+        alt="Background image"
+      />
     </div>
+
+    <nav class="menu">
+      <div class="aboutme">
+        <h1>About me</h1>
+        <p class="aboutmecontent">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis
+          velit quam, saepe harum delectus voluptatum maiores, libero est neque
+          maxime optio corrupti ea officia laborum, sed officiis accusamus sequi
+          aspernatur!
+        </p>
+      </div>
+      <div class="achievements">
+        <h2>Achievements</h2>
+        <p class="achievementscontent">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis
+          velit quam, saepe harum delectus voluptatum maiores, libero est neque
+          maxime optio corrupti ea officia laborum, sed officiis accusamus sequi
+          aspernatur!
+        </p>
+      </div>
+      <div class="contact">
+        <h3>Contact</h3>
+        <p class="contactcontent">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis
+          velit quam, saepe harum delectus voluptatum maiores, libero est neque
+          maxime optio corrupti ea officia laborum, sed officiis accusamus sequi
+          aspernatur!
+        </p>
+      </div>
+    </nav>
     <script src="Animations.js"></script>
   </body>
 </html>
