--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta property="og:description" content="CV de Johan Nilsson" />
     <meta property="og:title" content="CV de Johan Nilsson" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, height=device-height, initial-scale=1.0 "
+    />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
