Ajout de contenu texte

--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
 
     <nav class="menu">
       <div class="aboutme">
-        <h1>About me</h1>
+        <h1>About.me</h1>
         <p class="aboutmecontent">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis
-          velit quam, saepe harum delectus voluptatum maiores, libero est neque
-          maxime optio corrupti ea officia laborum, sed officiis accusamus sequi
-          aspernatur!
+          Hello!<br /><br />My name is Johan Nilsson and I'm a french
+          developper.<br /><br />I was born in 1990 near Paris and still live
+          around there.<br /><br />I love arts and most specifically music,
+          photography and drawings.
         </p>
       </div>
       <div class="achievements">
