--- a/index.html
+++ b/index.html
@@ -47,31 +47,45 @@
 
     <nav class="menu">
       <div class="aboutme">
-        <h1>About.me</h1>
+        <h1>Présentation</h1>
         <p class="aboutmecontent">
-          Hello!<br /><br />My name is Johan Nilsson and I'm a french
-          developper.<br /><br />I was born in 1990 near Paris and still live
-          around there.<br /><br />I love arts and most specifically music,
-          photography and drawings.
+          Hello!<br /><br />Je m'appelle Johan Nilsson et j'aspire à devenir
+          developpeur.<br /><br />Je suis né en 1990 près de Paris et vis toujours alentour.<br /><br />J'aime les arts et plus particulièrement la musique,
+          la photographie et le dessin.
         </p>
       </div>
       <div class="achievements">
-        <h2>Achievements</h2>
-        <p class="achievementscontent">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis
-          velit quam, saepe harum delectus voluptatum maiores, libero est neque
-          maxime optio corrupti ea officia laborum, sed officiis accusamus sequi
-          aspernatur!
-        </p>
+        <h2>Mon.Parcours</h2>
+        <div class="achievementscontent">
+          <ul>
+            <li>Expériences professionnelles:<br/>  </li>
+                J'ai évolué 7 ans au sein de la BNP PARIBAS où j'ai occupé les postes suivants:
+          <ul>
+              <li>Gestion de solution de banque à distance pour les Très Grandes Entreprises / 2018-2021</li>
+              <li>Conseiller risque et conformité Hello Bank by BNP Paribas / 2017 </li>
+              <li>Conseiller Banque en ligne /2014-2016 </li>
+          </ul>
+        <br/>
+         <li> Diplômes: <br/></li>
+          <ul>
+          <li>BTS Banque CFPB Paris 19e / 2016</li>
+          <li>BTS Management des unités commerciales Médicis Alternance Paris 13 , France / 2013</li>
+          <li>Terminale S option Science de l'ingénieur Lycée Gustave Eiffel Gagny, France / 2009</li>
+        
+          </ul>
+        </ul>
+        </div>
       </div>
       <div class="contact">
-        <h3>Contact</h3>
-        <p class="contactcontent">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis
-          velit quam, saepe harum delectus voluptatum maiores, libero est neque
-          maxime optio corrupti ea officia laborum, sed officiis accusamus sequi
-          aspernatur!
-        </p>
+        <h3>Contact.et.Liens</h3>
+        <div class="contactcontent">
+          N'hésitez pas à me contacter par mail :<br/>
+          <div class="links">
+          <a  href="mailto:johan.nilsson.mail@gmail.com"><img src ="https://zupimages.net/up/22/41/23hc.png" alt="E-mail"/></a>
+          <a  href="https://github.com/JNSPK" target="_blank"><img src ="https://zupimages.net/up/22/41/0ppq.png" alt="GitHub"/></a>
+          </div>
+        </div>
+       
       </div>
     </nav>
     <script src="Animations.js"></script>
