Update logo mail et animation sur version mobile

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <div class="contactcontent">
           N'hésitez pas à me contacter par mail :<br/>
           <div class="links">
-          <a  href="mailto:johan.nilsson.mail@gmail.com"><img src ="https://zupimages.net/up/22/41/23hc.png" alt="E-mail"/></a>
+          <a  href="mailto:johan.nilsson.mail@gmail.com"><img src ="https://zupimages.net/up/22/42/qbvb.png" alt="E-mail"/></a>
           <a  href="https://github.com/JNSPK" target="_blank"><img src ="https://zupimages.net/up/22/41/0ppq.png" alt="GitHub"/></a>
           </div>
         </div>
