Fix glitch de positions et landscape mode

--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
     <nav class="menu">
       <div class="aboutme">
         <h1>Présentation</h1>
-        <p class="aboutmecontent">
+        <div class="aboutmecontent">
           Hello!<br /><br />Je m'appelle Johan Nilsson et j'aspire à devenir
           developpeur.<br /><br />Je suis né en 1990 près de Paris et vis toujours alentour.<br /><br />J'aime les arts et plus particulièrement la musique,
           la photographie et le dessin.
-        </p>
+        </div>
       </div>
       <div class="achievements">
         <h2>Mon.Parcours</h2>
