rectification fautes d'orthographes

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <h1>Présentation</h1>
         <div class="aboutmecontent">
           Hello!<br /><br />Je m'appelle Johan Nilsson et j'aspire à devenir
-          developpeur.<br /><br />Je suis né en 1990 près de Paris et vis toujours alentour.<br /><br />J'aime les arts et plus particulièrement la musique,
+          developpeur.<br /><br />Je suis né en 1990 près de Paris et vis toujours alentours.<br /><br />J'aime les arts et plus particulièrement la musique,
           la photographie et le dessin.
         </div>
       </div>
@@ -59,7 +59,7 @@
         <div class="achievementscontent">
           <ul>
             <li>Expériences professionnelles:<br/>  </li>
-                J'ai évolué 7 ans au sein de la BNP PARIBAS où j'ai occupé les postes suivants:
+                J'ai évolué 7 ans au sein de la BNP PARIBAS où j'ai occupés les postes suivants:
           <ul>
               <li>Gestion de solution de banque à distance pour les Très Grandes Entreprises / 2018-2021</li>
               <li>Conseiller risque et conformité Hello Bank by BNP Paribas / 2017 </li>
