Fix mobile height

--- a/index.html
+++ b/index.html
@@ -50,42 +50,57 @@
         <h1>Présentation</h1>
         <div class="aboutmecontent">
           Hello!<br /><br />Je m'appelle Johan Nilsson et j'aspire à devenir
-          developpeur.<br /><br />Je suis né en 1990 près de Paris et vis toujours alentours.<br /><br />J'aime les arts et plus particulièrement la musique,
-          la photographie et le dessin.
+          developpeur.<br /><br />Je suis né en 1990 près de Paris et vis
+          toujours alentours.<br /><br />J'aime les arts et plus
+          particulièrement la musique, la photographie et le dessin.
         </div>
       </div>
       <div class="achievements">
         <h2>Mon.Parcours</h2>
         <div class="achievementscontent">
           <ul>
-            <li>Expériences professionnelles:<br/>  </li>
-                J'ai évolué 7 ans au sein de la BNP PARIBAS où j'ai occupés les postes suivants:
-          <ul>
-              <li>Gestion de solution de banque à distance pour les Très Grandes Entreprises / 2018-2021</li>
-              <li>Conseiller risque et conformité Hello Bank by BNP Paribas / 2017 </li>
-              <li>Conseiller Banque en ligne /2014-2016 </li>
+            <li>Expériences professionnelles:</li>
+            J'ai évolué 7 ans au sein de la BNP PARIBAS où j'ai occupés les
+            postes suivants:
+            <ul>
+              <li>
+                Gestion de solution de banque à distance pour les Très Grandes
+                Entreprises / 2018-2021
+              </li>
+              <li>
+                Conseiller risque et conformité Hello Bank by BNP Paribas / 2017
+              </li>
+              <li>Conseiller Banque en ligne /2014-2016</li>
+            </ul>
+            <br />
+            <li>Diplômes:</li>
+            <ul>
+              <li>BTS Banque CFPB Paris 19e / 2016</li>
+              <li>
+                BTS Management des unités commerciales Médicis Alternance Paris
+                13, France / 2013
+              </li>
+              <li>
+                Terminale S option Science de l'ingénieur Lycée Gustave Eiffel
+                Gagny, France / 2009
+              </li>
+            </ul>
           </ul>
-        <br/>
-         <li> Diplômes: <br/></li>
-          <ul>
-          <li>BTS Banque CFPB Paris 19e / 2016</li>
-          <li>BTS Management des unités commerciales Médicis Alternance Paris 13, France / 2013</li>
-          <li>Terminale S option Science de l'ingénieur Lycée Gustave Eiffel Gagny, France / 2009</li>
-        
-          </ul>
-        </ul>
         </div>
       </div>
       <div class="contact">
-        <h3>Contact.et.Liens</h3>
+        <h3>Contact</h3>
         <div class="contactcontent">
-          N'hésitez pas à me contacter par mail :<br/>
+          N'hésitez pas à me contacter par mail :<br />
           <div class="links">
-          <a  href="mailto:johan.nilsson.mail@gmail.com"><img src ="https://zupimages.net/up/22/42/qbvb.png" alt="E-mail"/></a>
-          <a  href="https://github.com/JNSPK" target="_blank"><img src ="https://zupimages.net/up/22/41/0ppq.png" alt="GitHub"/></a>
+            <a href="mailto:johan.nilsson.mail@gmail.com"
+              ><img src="https://zupimages.net/up/22/42/qbvb.png" alt="E-mail"
+            /></a>
+            <a href="https://github.com/JNSPK" target="_blank"
+              ><img src="https://zupimages.net/up/22/41/0ppq.png" alt="GitHub"
+            /></a>
           </div>
         </div>
-       
       </div>
     </nav>
     <script src="Animations.js"></script>
